[package]
name = "bolt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f", features = [ "json" ] }
sqlx = {version = "0.5.10", features = ["postgres", "runtime-tokio-rustls"]}
tokio = {version = "1.16.1", features = ["full"]}
consensus-encode = { git = "https://github.com/NCrashed/consensus-encode", rev = "8c04d05aecc1d0f320fb1ebed0878772c1e83c72" }
bitcoin =  { version = "^0.26", features = [ "rand" ] }
bitcoin_hashes = "^0.9"
bitcoin-utxo = { git = "https://github.com/hexresearch/bitcoin-utxo", branch = "debug" }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = [ "codec" ] }
chrono = "^0.4"
dashmap = "5.1"
bolt-shared = {path = "../bolt-shared"}
bolt-db = {path = "../bolt-db"}

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
rev = "31d06ee714c7cdab1911a8cb8fd5f9e148cc201f"
features = ["handlebars"]